--- a/documentation/docs/get-started/configuration/android.mdx
+++ b/documentation/docs/get-started/configuration/android.mdx
@@ -1,13 +1,13 @@
 This is the documentation of android configuration.
 
-import Appname from "@site/src/components/Appname/Appname";
+import AppName from "@site/src/components/AppName/AppName";
 import AppBrand from "@site/src/components/AppBrand/AppBrand";
 import Env from "@site/src/components/CodeBlock/Env";
 import App from "@site/src/components/CodeBlock/App";
 
 ## Current Status
 
-- Current AppName is <Appname background={true} /> and application id is <Appname packageName={true} background={true} />
+- Current AppName is <AppName background={true} /> and application id is <AppName packageName={true} background={true} />
 - Also you can see <AppBrand background={true}/> is a brand name system.
 
 ## Apk Build , App Start and Bundle
