--- a/documentation/docs/get-started/installation.mdx
+++ b/documentation/docs/get-started/installation.mdx
@@ -1,5 +1,5 @@
-import InputAppName from "@site/src/components/Appname/InputAppName";
-import Appname from "@site/src/components/Appname/Appname";
+import InputAppName from "@site/src/components/AppName/InputAppName";
+import AppName from "@site/src/components/AppName/AppName";
 
 import NpmInstall from "@site/src/components/CodeBlock/NpmInstall";
 import CodeStructure from "@site/src/components/CodeBlock/CodeStructure";
@@ -22,7 +22,7 @@ First you need to enter your project / application name.
 
 ## Project structure {#project-structure}
 
-Assuming you chose the classic template and named your application <Appname background />, you will see the following files generated under a new directory <Appname background />:
+Assuming you chose the classic template and named your application <AppName background />, you will see the following files generated under a new directory <AppName background />:
 
 <CodeStructure />
 
@@ -40,7 +40,7 @@ Assuming you chose the classic template and named your application <Appname back
 <br />
 <br />
 
-Congratulations! You have just created your <Appname background/> application!
+Congratulations! You have just created your <AppName background/> application!
 
 ## Problems? ⚡ {#problems}
 
