--- a/documentation/docs/developerTools/introduction.mdx
+++ b/documentation/docs/developerTools/introduction.mdx
@@ -11,5 +11,5 @@ which is a standalone Mac that connects to the debug version of the app.
 It provides additional functionality, including the Redux developer tools that
 allows directly modifying the app state.
 
-It is also possible to use [Flipper](flipper.md) to debug the app - it is now
+It is also possible to use [Flipper](flipper) to debug the app - it is now
 the preferred way to debug React Native apps.
