--- a/documentation/docs/get-started/scripts/common.mdx
+++ b/documentation/docs/get-started/scripts/common.mdx
@@ -38,7 +38,7 @@ Install the correct npm version using the `engines` field from `package.json`.
 
 ### `npm run release`
 
-Start an app release from a release branch (see [Contributing](contributing.md)
+Start an app release from a release branch (see [Contributing](/contributing.mdx)
 guidelines).
 
 ### `npm audit fix --force`
