--- a/documentation/docs/get-started/configuration/android.mdx
+++ b/documentation/docs/get-started/configuration/android.mdx
@@ -13,7 +13,7 @@ import App from "@site/src/components/CodeBlock/App";
 ## Apk Build , App Start and Bundle
 
 Actually we implemented multiple script for start,build apk and bundle release
-in android. it can easy to multiple apk in different [environment](configuration#environment).
+in android. it can easy to multiple apk in different [environment](#configuration-environment-files).
 
 ## Steps
 
