--- a/documentation/docs/troubleshooting.mdx
+++ b/documentation/docs/troubleshooting.mdx
@@ -1,3 +1,5 @@
+import Link from '@docusaurus/Link';
+
 # Troubleshooting
 
 ## Development issues
@@ -8,7 +10,7 @@
 | `Android X build issues`                         | <https://github.com/facebook/react-native/issues/25292#issuecomment-502998885>                                           |
 | `App is getting killed when built with Xcode 11` | <https://forums.developer.apple.com/thread/117939>                                                                       |
 | `CocoaPods installation failing`                 | <https://stackoverflow.com/a/62992835>                                                                                   |
-| `CodeSigning failing`                            | see [Code Signing](docs/get-started/codeSigning/codeSigning)                                                             |
+| `CodeSigning failing`                            | see <Link to="/docs/get-started/codeSigning">Code Signing</Link>                                                             |
 | `Could not find iPhone X simulator`              | <https://github.com/facebook/react-native/issues/23282>                                                                  |
 | `IOS App running failed through terminal`        | <https://dev.to/markwitt_me/creating-a-custom-vscode-terminal-profile-for-using-rosetta-on-an-m1-mac-apple-silicon-2gb2> |
 | `react-native packager port conflict`            | <https://stackoverflow.com/a/54635378>                                                                                   |
